@@ -1,10 +1,10 @@
-MD5 a09788edad9ada99e4139565163feaef ChangeLog 1895
+MD5 8bc535fb4fc49704b6fcd4ccdd50eb49 ChangeLog 2001
 MD5 07f82ecfd192372da0341fcb372fbc53 acpid-1.0.1.ebuild 1009
-MD5 86fe76ed8fa5d12ab3a4bf704c9a3d29 acpid-1.0.2-r1.ebuild 1131
-MD5 458dd71c38e5254f55871d3c9bc21ff8 acpid-1.0.2-r2.ebuild 1228
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+MD5 86fe76ed8fa5d12ab3a4bf704c9a3d29 acpid-1.0.2-r1.ebuild 1131
+MD5 5f5266e8cd596ed25a17f1159d58bb9a acpid-1.0.2-r2.ebuild 1244
 MD5 4bd2fb8d3844765258c746c05ca35c50 files/acpid.rc6 665
-MD5 3cc2de9822a0f65e061e31184ad2e91f files/default.sh-gentoo.patch 550
 MD5 1ad4b7deead64fc207ea20bd1c340973 files/digest-acpid-1.0.1 62
 MD5 4bf4b207e7f3c9f7a966c62236dd73be files/digest-acpid-1.0.2-r1 62
+MD5 3cc2de9822a0f65e061e31184ad2e91f files/default.sh-gentoo.patch 550
 MD5 4bf4b207e7f3c9f7a966c62236dd73be files/digest-acpid-1.0.2-r2 62
