@@ -1,13 +1,13 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/acpid-1.0.2-r2.ebuild,v 1.2 2003/10/17 15:53:34 twp Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/acpid-1.0.2-r2.ebuild,v 1.3 2004/01/29 02:45:49 agriffis Exp $
 
 S="${WORKDIR}/${P}"
 DESCRIPTION="Daemon for Advanced Configuration and Power Interface."
 SRC_URI="mirror://sourceforge/acpid/${P}.tar.gz"
 HOMEPAGE="http://acpid.sourceforge.net/"
 IUSE=""
-KEYWORDS="x86 ~amd64 -ppc"
+KEYWORDS="x86 ~amd64 -ppc alpha ia64"
 SLOT="0"
 LICENSE="GPL-2"
 
