@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/acpid
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/ChangeLog,v 1.12 2003/10/17 15:53:34 twp Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acpid/ChangeLog,v 1.13 2004/01/29 02:45:49 agriffis Exp $
+
+  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> acpid-1.0.2-r2.ebuild:
+  stable on alpha and ia64
 
   17 Oct 2003; Tom Payne <twp@gentoo.org> acpid-1.0.2-r2.ebuild :
   Changed ~x86 to x86.
